feat: Implement responsive improvements and gallery image viewer
This commit introduces several major enhancements:

- **Responsive Overhaul:**
  - Implemented a mobile-first, full-screen overlay for content sections (Manufactura, Servicios, Experiencia) to provide a consistent look and feel on mobile devices.
  - Added a hamburger menu for mobile navigation.
  - Adjusted various styles for better responsive behavior across the site.

- **Gallery Viewer:**
  - Added a full-screen image viewer (lightbox) to the gallery page.
  - Users can now click on an image to view a larger version.
  - Implemented next/previous navigation with arrows and keyboard controls.
  - The viewer is mobile-friendly and allows closing by clicking the background or a dedicated close button.

--- a/locales/ca/translation.json
+++ b/locales/ca/translation.json
@@ -31,7 +31,7 @@
   "experiencia": {
     "title": "Més de 50 anys d'experiència",
     "subtitle": "Claus de l'Èxit",
-    "point1": "Assessorament Personalitzat i Creatiu",
+    "point1": "Dissenys a mida",
     "point2": "Gestió Integral de Comandes",
     "point3": "Passió per la creació manual i l'artesania",
     "point4": "Compromís amb el client",
