--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -31,7 +31,7 @@
   "experiencia": {
     "title": "More than 50 years of experience",
     "subtitle": "Keys to Success",
-    "point1": "Personalized and Creative Advice",
+    "point1": "Custom designs",
     "point2": "Comprehensive Order Management",
     "point3": "Passion for manual creation and craftsmanship",
     "point4": "Commitment to the client",
