--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -31,7 +31,7 @@
   "experiencia": {
     "title": "Más de 50 años de experiencia",
     "subtitle": "Claves del Éxito",
-    "point1": "Asesoramiento Personalizado y Creativo",
+    "point1": "Diseños a medida",
     "point2": "Gestión Integral de Pedidos",
     "point3": "Pasión por la creación manual y la artesanía",
     "point4": "Compromiso con el cliente",
